...

	if (isAuthLoading) return <LoadingIndicator />;

	return (
		<View style={styles.screen}>
			<View style={styles.container}>
				<Text style={styles.title}>사용자 설정</Text>
				<SettingListItem
					borderRound="top"
					showChevron
					onPress={navigateToAccount}
					testID="myAccountButton"
				>
					<Text style={styles.text}>내 계정</Text>
				</SettingListItem>
				<SettingListItem style={styles.pushNotificationRow}>
					<View style={styles.flexRow}>
						<Text style={styles.text}>푸시 알림</Text>
...
