...
				headerBackButtonDisplayMode: 'minimal',
			}}
		>
			<ProfileStack.Screen
				name="Profile"
				component={userInfo ? Profile : Login}
				options={{ title: '프로필' }}
			/>
		</ProfileStack.Navigator>
	);
};

export default ProfileStackNavigator;
...
