...
									? Colors.social.kakaoText
									: Colors.social.appleText,
					},
				]}
			>
				{oauthType === 'naver'
					? '네이버로 로그인'
					: oauthType === 'kakao'
						? '카카오로 로그인'
						: 'Apple로 로그인'}
			</Text>
			{disabled && (
				<View style={styles.bubbleWrapper}>
...
